--- a/RapApp/Storyboard/Base.lproj/Home.storyboard
+++ b/RapApp/Storyboard/Base.lproj/Home.storyboard
@@ -27,12 +27,17 @@
                                 <color key="textColor" red="0.76470588235294112" green="0.027450980392156862" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOh-iM-9sw">
-                                <rect key="frame" x="175" y="511" width="64" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DOh-iM-9sw">
+                                <rect key="frame" x="129.33333333333334" y="511" width="157.00000000000003" height="50"/>
+                                <color key="backgroundColor" red="0.30588235294117649" green="0.30588235294117649" blue="0.31372549019607843" alpha="0.31492221615720523" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="PhE-DZ-bJc"/>
                                 </constraints>
-                                <state key="normal" title="Generate"/>
+                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="20"/>
+                                <size key="titleShadowOffset" width="2" height="1"/>
+                                <state key="normal" title="Generate Word">
+                                    <color key="titleColor" red="0.25537555185648975" green="0.39514655303209878" blue="0.70090993850880223" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="randomButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZfC-ou-CIg"/>
                                 </connections>
@@ -183,13 +188,13 @@
                                     <action selector="playButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XCr-9h-oWQ"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Xw-sh-Moz">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Music Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Xw-sh-Moz">
                                 <rect key="frame" x="14" y="696" width="344" height="31"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="344" id="65q-3C-MuL"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" red="0.6250303275670076" green="0.62611826852257979" blue="0.64272010068762286" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rsO-rO-d47" customClass="ScrubberBar" customModule="RapApp" customModuleProvider="target">
@@ -201,6 +206,7 @@
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O6Z-rD-Adz">
                                 <rect key="frame" x="352" y="20" width="42" height="41"/>
+                                <color key="backgroundColor" red="0.65381565005952624" green="0.65495369535384451" blue="0.67232011296660121" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="4Og-hL-s6I"/>
                                     <constraint firstAttribute="width" constant="42" id="zS5-6x-Bm2"/>
@@ -210,12 +216,19 @@
                                     <segue destination="wbi-bm-gxD" kind="show" identifier="ShowSettings" id="pJt-OK-sBl"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scrub Tempo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YqF-yJ-aNk">
+                                <rect key="frame" x="156.33333333333334" y="638.66666666666663" width="102.00000000000003" height="20.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.76470588235294112" green="0.027450980392156862" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10196078431372549" blue="0.11372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="O6Z-rD-Adz" secondAttribute="trailing" id="2TZ-4f-RnG"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EA1-gu-ywy" secondAttribute="bottom" id="8cW-qJ-rSN"/>
                             <constraint firstItem="rsO-rO-d47" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BEG-YH-Equ"/>
+                            <constraint firstItem="rsO-rO-d47" firstAttribute="top" secondItem="YqF-yJ-aNk" secondAttribute="bottom" constant="8" id="GEh-ex-Gc7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DOh-iM-9sw" secondAttribute="bottom" constant="175" id="HVL-qf-qF0"/>
                             <constraint firstItem="O6Z-rD-Adz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HwZ-LD-EGe"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rsO-rO-d47" secondAttribute="trailing" id="QQT-JR-H9v"/>
@@ -229,6 +242,7 @@
                             <constraint firstItem="DOh-iM-9sw" firstAttribute="top" secondItem="BvD-bC-H1s" secondAttribute="bottom" constant="90" id="i90-Jj-UQH"/>
                             <constraint firstItem="DOh-iM-9sw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jYF-NW-qjB"/>
                             <constraint firstItem="EA1-gu-ywy" firstAttribute="leading" secondItem="8Xw-sh-Moz" secondAttribute="trailing" constant="8" symbolic="YES" id="kFp-wW-GyW"/>
+                            <constraint firstItem="YqF-yJ-aNk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kR5-2a-yGl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="EA1-gu-ywy" secondAttribute="trailing" id="kq3-JE-mhF"/>
                             <constraint firstItem="aL4-r9-fJY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="lMt-Mb-ZhQ"/>
                             <constraint firstItem="TI2-lC-4KR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="n9Q-Vu-pp3"/>
